--- a/american antelope/tester/MainWindow.xaml
+++ b/american antelope/tester/MainWindow.xaml
@@ -1,8 +1,10 @@
 ﻿<Window x:Class="tester.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded">
+        Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button x:Name="buttonStart" Content="Start" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="buttonStart_Click"/>
+        <Button x:Name="buttonStop" Content="Stop" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="93,0,0,0" IsEnabled="False"/>
+
     </Grid>
 </Window>
