--- a/american antelope/tester/App.xaml
+++ b/american antelope/tester/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="tester.App"
+﻿<Application x:Class="CS.Applications.tester.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
