--- a/american antelope/tester/MainWindow.xaml
+++ b/american antelope/tester/MainWindow.xaml
@@ -1,10 +1,13 @@
-﻿<Window x:Class="tester.MainWindow"
+﻿<Window x:Class="CS.Applications.tester.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525" Closing="Window_Closing">
     <Grid>
         <Button x:Name="buttonStart" Content="Start" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="buttonStart_Click"/>
         <Button x:Name="buttonStop" Content="Stop" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="93,0,0,0" IsEnabled="False"/>
+        <RadioButton x:Name="radioButtonEv" Content="EV" HorizontalAlignment="Left" Margin="173,3,0,0" VerticalAlignment="Top" IsChecked="True" Checked="RadioButton_Checked"/>
+        <RadioButton x:Name="radioButtonEh101p" Content="EH-101P" HorizontalAlignment="Left" Margin="213,3,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+        <TextBox x:Name="textBoxCount" HorizontalAlignment="Left" Height="103" Margin="0,24,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="331"/>
 
     </Grid>
 </Window>
